@@ -1,3 +1,12 @@
+2013-09-21  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/prg/compton.jl: improve translucency for
+	shadow settings [fuchur]
+
+	* lisp/sawfish/wm/tabs/tabgroup.jl: make all inactive tabs
+	shaded [fuchur]
+
+	* themes/StyleTab/theme.jl: update for recent changes [fuchur]
+
 2013-09-17  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/prg/compton.jl: improve support for xinerama setups
 	[fuchur]
